--- a/frontend/index.html
+++ b/frontend/index.html
@@ -39,7 +39,7 @@
         </div>
         <div class="menu">
           <a
-            href="https://discord.gg/A9CnsVzzkZ"
+            href="https://discord.com/channels/589182320423206912/981112891950379039"
             target="_blank"
             rel="noopener noreferrer"
           >
