--- a/frontend/index.html
+++ b/frontend/index.html
@@ -108,7 +108,7 @@
         </p>
         <a
           id="actionButton"
-          href="https://discord.gg/A9CnsVzzkZ"
+          href="https://discord.com/channels/589182320423206912/981112891950379039"
           target="_blank"
           rel="noopener noreferrer"
           class="hero-btn btn"
