--- a/frontend/index.html
+++ b/frontend/index.html
@@ -161,7 +161,7 @@
         <p>View it in the collection:</p>
         <a
           id="mintedLinkBtn"
-          href="https://testnets.opensea.io/collection/PatelBoys"
+          href="https://testnets.opensea.io/collection/patelnft"
           target="_blank"
           rel="noopener noreferrer"
         >
